Fixing overlapping meta info

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -109,7 +109,7 @@ h3 {
     font-size: 0.5em;
     text-transform: uppercase;
     color: #888;
-    margin-top: -2.25em;
+    margin-top: -0.25em;
     line-height: calc(2.5em/2);
     text-align: right;
 }
